RESOLVED FIXED11933
REGRESSION: trying to change a property in a computed style declaration results in a crash
https://bugs.webkit.org/show_bug.cgi?id=11933
Summary REGRESSION: trying to change a property in a computed style declaration resul...
Alexey Proskuryakov
Reported 2006-12-22 10:35:26 PST
Patch forthcoming.
Attachments
proposed fix (5.37 KB, patch)
2006-12-22 11:31 PST, Alexey Proskuryakov
ggaren: review+
Alexey Proskuryakov
Comment 1 2006-12-22 11:31:22 PST
Created attachment 11971 [details] proposed fix
Geoffrey Garen
Comment 2 2006-12-22 14:40:35 PST
Comment on attachment 11971 [details] proposed fix r=me
Geoffrey Garen
Comment 3 2006-12-22 14:41:28 PST
That assertion has proven helpful in the past, so it might be useful to assert "has stylesheet or is computedStyleDeclaration." Just a thought.
Alexey Proskuryakov
Comment 4 2006-12-22 22:25:12 PST
(In reply to comment #3) > That assertion has proven helpful in the past, so it might be useful to assert > "has stylesheet or is computedStyleDeclaration." Just a thought. I also thought so, but couldn't find any way to tell that a style declaration is a computed one. Is there any? Adding a new virtual function for the sake of an assertion seemed a bit too much to me.
Geoffrey Garen
Comment 5 2006-12-22 22:41:22 PST
Agreed.
Geoffrey Garen
Comment 6 2006-12-22 22:41:42 PST
I can't see a good way to do what I suggested.
Alexey Proskuryakov
Comment 7 2006-12-23 23:24:59 PST
Committed revision 18406, although this code will be rewritten soon, because enabling exceptions for invalid CSS turned out to be too dangerous for compatibility.
Note You need to log in before you can comment on or make changes to this bug.