        Reviewed by Geoff.

http://bugs.webkit.org/show_bug.cgi?id=11933
        REGRESSION: trying to change a property in a computed style declaration results in a crash

        Test: fast/dom/computed-style-set-property.html

        * bindings/js/kjs_css.cpp:
        (KJS::DOMCSSStyleDeclaration::put): Added a check for null m_impl->stylesheet(). Also, fixed
        incorrect logic in Dashboard branch - it didn't return in time if removeProperty() raised
        an exception (credit for noticing this bug goes to Geoff).



Canonical link: https://commits.webkit.org/15451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18406 268f45cc-cd09-0410-ab3c-d52691b4dbfc