WebCore/bindings/js/kjs_css.cpp
@@ -220,16 +220,20 @@ void DOMCSSStyleDeclaration::put(ExecState* exec, const Identifier &propertyName
 #ifdef KJS_VERBOSE
       kdDebug(6070) << "DOMCSSStyleDeclaration: prop=" << prop << " propvalue=" << propvalue << endl;
 #endif
-      ASSERT(styleDecl.stylesheet()->isCSSStyleSheet());
-      if (Frame* frame = static_cast<CSSStyleSheet*>(styleDecl.stylesheet())->doc()->frame())
-        if (frame->settings()->shouldUseDashboardBackwardCompatibilityMode()) {
-          styleDecl.removeProperty(prop, exception);
-          if (!exception) {
-            ExceptionCode exceptionIgnored = 0;
-            styleDecl.setProperty(prop, propValue, exceptionIgnored);
+      StyleSheet* stylesheet = styleDecl.stylesheet();
+      // Computed style declarations don't have stylesheets.
+      if (stylesheet) {
+        ASSERT(stylesheet->isCSSStyleSheet());
+        if (Frame* frame = static_cast<CSSStyleSheet*>(stylesheet)->doc()->frame())
+          if (frame->settings()->shouldUseDashboardBackwardCompatibilityMode()) {
+            styleDecl.removeProperty(prop, exception);
+            if (!exception) {
+              ExceptionCode exceptionIgnored = 0;
+              styleDecl.setProperty(prop, propValue, exceptionIgnored);
+            }
             return;
           }
-        }
+      }
       styleDecl.setProperty(prop, propValue, exception);
     } else {
       DOMObject::put(exec, propertyName, value, attr);
